<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Message here"
            />
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/button_sensor_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_datasources"
                android:enabled="false"
                />
            <Button
                android:id="@+id/button_register_listener"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_listener"
                android:enabled="false"
                />
            <Button
                android:id="@+id/button_unregister_listener"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unregister_listener"
                android:enabled="false"
                />
            <Button
                android:id="@+id/button_subscribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscribe"
                android:enabled="false"
                />
            <Button
                android:id="@+id/button_list_subscribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_subscribe"
                android:enabled="false"
                />
            <Button
                android:id="@+id/button_unsubscribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unsubscribe"
                android:enabled="false"
                />
            <Button
                android:id="@+id/button_start_session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_session"
                android:enabled="false"
                />
            <Button
                android:id="@+id/button_read_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_data"
                android:enabled="false"
                />
            <Button
                android:id="@+id/button_insert_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_data"
                android:enabled="false"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
