<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/text_datasource_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datasource_type"
        />
    <RadioGroup
        android:id="@+id/radiogroup_datasource_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_datasource_type"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radio_datasource_raw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/raw"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/radio_datasource_derived"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/derived"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/text_data_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiogroup_datasource_type"
        android:text="@string/data_type"
        />
    <Spinner
        android:id="@+id/spinner_data_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_data_type"
        android:entries="@array/data_type_array"
        >

    </Spinner>
</RelativeLayout>
