<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/text_session_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_name"
        />
    <EditText
        android:id="@+id/edit_session_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_session_name"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/text_session_identifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_session_name"
        android:text="@string/session_identifier"
        />
    <EditText
        android:id="@+id/edit_session_identifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_session_identifier"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/text_session_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_session_identifier"
        android:text="@string/description"
        />
    <EditText
        android:id="@+id/edit_session_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_session_description"
        android:inputType="text"
        />
    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_session_description"
        android:layout_alignParentRight="true"
        android:text="@android:string/ok"
        />
    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_session_description"
        android:text="@android:string/cancel"
        />
</RelativeLayout>
